--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "test": "vitest run"
   },
   "dependencies": {
+    "@mdxeditor/editor": "^3.42.0",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@supabase/supabase-js": "^2.56.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.4.6",
     "@tanstack/react-router": "^1.130.2",
@@ -29,6 +31,7 @@
     "tw-animate-css": "^1.3.6"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.16",
     "@testing-library/dom": "^10.4.0",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^24.3.0",
@@ -40,5 +43,9 @@
     "vite": "^7.1.3",
     "vitest": "^3.0.5",
     "web-vitals": "^5.1.0"
-  }
+  },
+  "trustedDependencies": [
+    "@tailwindcss/oxide",
+    "es5-ext"
+  ]
 }
