--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@supabase/supabase-js": "^2.56.0",
     "@tailwindcss/vite": "^4.0.6",
     "@tanstack/react-devtools": "^0.4.6",
+    "@tanstack/react-query": "^5.85.5",
     "@tanstack/react-router": "^1.130.2",
     "@tanstack/react-router-devtools": "^1.131.5",
     "@tanstack/router-plugin": "^1.121.2",
